# PromptLens

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
conf/: config.yaml
core/: __init__.py  config.py  differ.py  embedder.py  judge.py  ollama_client.py  pipeline.py  runner.py  schemas.py
examples/classification/: v1.txt  v2.txt
examples/roleplay/: v1.txt  v2.txt
examples/summarization/: v1.txt  v2.txt
tests/: test_differ.py  test_embedder.py  test_schemas.py
