[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prompt-diff-visualizer"
version = "1.0.0"
description = "Semantic diff tool for LLM prompts — powered by local Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "streamlit>=1.35",
    "pydantic>=2.6",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.scripts]
prompt-diff = "cli:app"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
